--- a/_config.yml
+++ b/_config.yml
@@ -101,9 +101,11 @@ t:
     about: "About"
     written_on: "Written on"
     read_more: "Read more"
+    share_title: "Help to spread this post:"
   pt:
     flag: "br"
     home: "Início"
     about: "Sobre"
     written_on: "Escrito em"
     read_more: "Ler mais"
+    share_title: "Ajude a propagar este post:"
