Update about and fix spelling on draft.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Luciano Bandeira
 
 # Short bio or description (displayed in the header)
-description: Ruby developer
+description: Ruby and React developer
 
 index:
   en: posts
